--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vue-stydy</title>
+    <title>vue-study</title>
   </head>
   <body>
     <div id="app"></div>
